# observability-setup

./: README.md  docker-compose.yml  pyproject.toml
emissions/: Cargo.toml
emissions/.sqlx/: query-d4bc1c51645ddba0f77ce70f667badbf42c2a9011bcf6773409c82ac45261437.json
