[tool.poetry]
name = "observability-setup"
version = "0.1.0"
description = "System observability and monitoring setup"
authors = ["Ike <isaac.chasse@valkyrie.ai>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
supervisor = "^4.2.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
